2017-11-23  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Only reverse word list on Thai chunks.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Add word list reversion when a Thai chunk is done.
	    Other chunks don't need it.
	* src/abswordseg.cpp (AbsWordSeg::WordSeg()):
	  - Remove ReverseLinkSep() call.
	* src/abswordseg.h, src/abswordseg.cpp
	  (-AbsWordSeg::ReverseLinkSep()):
	  - Drop the method, now unneeded.

2017-11-23  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Reorder WordStack member declarations.

	* src/wordstack.h (class WordStack):
	  - Move private section to the end.

2017-11-22  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Chain cases in AbsWordSeg::CreateWordList() together.

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList()):
	  - Chain chunk type cases into a single if-else-statement,
	    instead of several if-statements with 'continue' at the end,
	    to clarify the classification checks.

2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Make WordSeg() internal functions private.

	* src/abswordseg.h:
	  - Move CreateWordList(), ReverseLinkSep(), CreateSentence(),
	    GetBestSen() methods from protected to private.

2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Rename AbsWordSeg::SwapLinkSep() to ReverseLinkSep().

	* src/abswordseg.h, src/abswordseg.cpp:
	  - Rename AbsWordSeg::SwapLinkSep() to ReverseLinkSep().

2017-11-21  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Remove empty default c-tors.

	* src/longwordseg.h, src/longwordseg.cpp:
	* src/maxwordseg.h, src/maxwordseg.cpp:
	  - Remove empty default c-tors for LongWordSeg & MaxWordSeg.

2017-11-20  Theppitak Karoonboonyanan <theppitak@gmail.com>

	Simplify loop in MaxWordSeg::WordSegArea().

	* src/maxwordseg.cpp (MaxWordSeg::WordSegArea()):
	  - Rearrange loop for more readability.
	  - With this, foundUnk flag is eliminated.

2017-11-17  Theppitak Karoonboonyanan <theppitak@gmail.com>
